Implement schedule publication on backend (#203)
* Implement schedule publication on backend
